# EventFlow.AI

./: .pylintrc  EventFlow.AI.code-workspace  README.md  Readme.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.roo/: mcp.json
app/: layout.tsx  metadata.ts  page.tsx
app/(authenticated)/: layout.tsx
app/api/copilotkit/: route.ts
app/dashboard/: layout.client.tsx  layout.tsx  page.tsx
app/events/: layout.tsx  page.tsx
app/landing/: page.tsx
app/services/: auth.ts
app/vendors/: layout.tsx  page.tsx
backend/: pyproject.toml
backend/api/: index.py
backend/api/services/crewAI/foods_crew/: README.md  pyproject.toml
backend/api/services/crewAI/foods_crew/src/foods_crew/: crew.py  main.py
components/ai-chat/: ai-assistant-intro.tsx  ai-chat-panel.tsx
components/dashboard/: create-event-dialog.tsx  dashboard-header.tsx  dashboard-shell.tsx  dashboard-view.tsx  event-card.tsx  event-stats.tsx  event-timeline.tsx
components/events/: event-card.tsx  event-details.tsx  events-view.tsx
components/landing/: CtaSection.tsx  FeaturesSection.tsx  LoginForm.tsx  SignupForm.tsx
components/layout/: app-header.tsx  app-shell.tsx  app-sidebar.tsx
components/ui/: FoodCard.tsx  LicenseCard.tsx
components/vendors/: add-vendor-dialog.tsx  vendor-card.tsx  vendors-view.tsx
hooks/: use-foods.tsx  use-licenses.tsx
lib/: api-client.ts  langgraphtypes.ts  mock-data.ts  mock-vendors.ts  types.ts  utils_url.ts
src/app/: globals.css  page.tsx
src/components/: MyAssistant.tsx
src/types/: prism.d.ts
(+85 files in other folders)
