[project]
name = "foods_crew"
version = "0.1.0"
description = "foods_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
foods_crew = "foods_crew.main:run"
run_crew = "foods_crew.main:run"
train = "foods_crew.main:train"
replay = "foods_crew.main:replay"
test = "foods_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
